--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -211,33 +211,7 @@
 </table>
 <h1>RUN</h1>
 <h1>Work history</h1>
-<h1>期末考</h1>
-<p><br/>零件檔影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/KdtZpSYeQEU" width="800"></iframe></p>
-<p>final test wink </p>
-<p></p>
-<script>
-var winkVideoData = {
-dataVersion: 1,
-frameRate: 20,
-buttonFrameLength: 10,
-buttonFrameOffset: 5,
-frameStops: {
-},
-};
-</script>
-<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/final test.mp4" type="video/mp4"/></video>
-<div class="winkVideoOverlayClass"></div>
-<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
-<div class="winkVideoControlBarProgressLeftClass" style="text-align: left;"> 心得:這學期結束了，一開始分配到兩個新的程式，也剛好被分到兩個都不會的程式，也就是NX跟onshape，還好最後發現繪圖邏輯是一樣的，</div>
-<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<div class="winkVideoControlBarProgressRightClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass"></div>
-</div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div><h1>HW1</h1>
+<div class="winkVideoPlayOverlayClass"></div><h1>HW1</h1>
 <p>HW1 佔學期成績 25%</p>
 <p><span style="background-color: #ffff99;">HW1 必須在 2021.11.10 22:00 之前完成.<br/></span></p>
 <p><a href="https://github.com/mdecourse/cad2021/discussions/5">HW1 具體項目成果回報區</a>將於 2021.09.23 開啟, 於 <span style="background-color: #ff99cc;">2021.11.10 22:00 關閉.</span></p>
@@ -440,4 +414,16 @@ frameStops: {
 <p>零件檔影片</p>
 <p></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/KdtZpSYeQEU" width="560"></iframe>.f</p>
-<p>wink final test</p></div></div>
+<p>wink final test</p>
+<p></p>
+<p>// ]]&gt;</p>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="./../downloads/final test.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+</div>
+</div></div></div>
