--- a/content/Final Project.html
+++ b/content/Final Project.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li><a href='期末考.html'>期末考</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Oneshape.html'>Oneshape</a><ul class='dropdown'><li><a href='Oneshape介紹.html'>Oneshape介紹</a><li><a href='Oneshape 操作流程.html'>Oneshape 操作流程</a></li></ul><li class='has-children'><a href='CAD2 NX.html'>CAD2 NX</a><ul class='dropdown'><li><a href='NX 介紹.html'>NX 介紹</a><li><a href='NX 操作流程.html'>NX 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='W13-1.html'>W13-1</a><li><a href='W13-2.html'>W13-2</a></li></li></ul></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Oneshape.html'>Oneshape</a><ul class='dropdown'><li><a href='Oneshape介紹.html'>Oneshape介紹</a><li><a href='Oneshape 操作流程.html'>Oneshape 操作流程</a></li></ul><li class='has-children'><a href='CAD2 NX.html'>CAD2 NX</a><ul class='dropdown'><li><a href='NX 介紹.html'>NX 介紹</a><li><a href='NX 操作流程.html'>NX 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='W13-1.html'>W13-1</a><li><a href='W13-2.html'>W13-2</a></li></li></ul></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,15 +142,17 @@ img.add_border {
     <div id="tipue_search_content">HW3 << <a href='HW3.html'>Previous</a> <br /><h1>Final Project</h1>
 <p></p>
 <p><span style="background-color: #ffff99;"></span></p>
-<p>零件檔影片</p>
+<p><strong>零件檔影片</strong></p>
 <p></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/KdtZpSYeQEU" width="560"></iframe>.f</p>
 <p>wink final test</p>
 <p></p>
 <p>// ]]&gt;</p>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
 <source src="./../downloads/final test.mp4" type="video/mp4"/></video>
-<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoOverlayClass">心得:這學期學到很多東西，一開始被分配到兩個繪圖軟體.，分別是NX跟onshape，這兩個繪圖軟體對我來說都是新的東西，剛開始很排斥畫，到後來開始做作業的時候，發現繪圖邏輯都是一樣的，只有按鈕長的不一樣，後來又學到coppeliasim要組機械手臂，那真的很難，但到後來詢問組長和同住的室友就有比較了解，謝謝老師這學期的教導。</div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
