--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -411,15 +411,17 @@ frameStops: {
 <h1>Final Project</h1>
 <p></p>
 <p><span style="background-color: #ffff99;"></span></p>
-<p>零件檔影片</p>
+<p><strong>零件檔影片</strong></p>
 <p></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/KdtZpSYeQEU" width="560"></iframe>.f</p>
 <p>wink final test</p>
 <p></p>
 <p>// ]]&gt;</p>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
 <source src="./../downloads/final test.mp4" type="video/mp4"/></video>
-<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoOverlayClass">心得:這學期學到很多東西，一開始被分配到兩個繪圖軟體.，分別是NX跟onshape，這兩個繪圖軟體對我來說都是新的東西，剛開始很排斥畫，到後來開始做作業的時候，發現繪圖邏輯都是一樣的，只有按鈕長的不一樣，後來又學到coppeliasim要組機械手臂，那真的很難，但到後來詢問組長和同住的室友就有比較了解，謝謝老師這學期的教導。</div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
