--- a/content/Final Project.html
+++ b/content/Final Project.html
@@ -144,22 +144,31 @@ img.add_border {
 <p><span style="background-color: #ffff99;"></span></p>
 <p><strong>零件檔影片</strong></p>
 <p></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/KdtZpSYeQEU" width="560"></iframe>.f</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/KdtZpSYeQEU" width="560"></iframe></p>
 <p>wink final test</p>
-<p></p>
-<p>// ]]&gt;</p>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/final test.mp4" type="video/mp4"/></video>
-<div class="winkVideoOverlayClass">心得:這學期學到很多東西，一開始被分配到兩個繪圖軟體.，分別是NX跟onshape，這兩個繪圖軟體對我來說都是新的東西，剛開始很排斥畫，到後來開始做作業的時候，發現繪圖邏輯都是一樣的，只有按鈕長的不一樣，後來又學到coppeliasim要組機械手臂，那真的很難，但到後來詢問組長和同住的室友就有比較了解，謝謝老師這學期的教導。</div>
+<source src="https://40923228.github.io/cad2021_hw/downloads/final%20test.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
-</div></div></div><br />HW3 << <a href='HW3.html'>Previous</a> </div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+<p>心得:這學期學到很多東西，一開始被分配到兩個繪圖軟體.，分別是NX跟onshape，這兩個繪圖軟體對我來說都是新的東西，剛開始很排斥畫，到後來開始做作業的時候，發現繪圖邏輯都是一樣的，只有按鈕長的不一樣，後來又學到coppeliasim要組機械手臂，那真的很難，但到後來詢問組長和同住的室友就有比較了解，謝謝老師這學期的教導。</p></div></div><br />HW3 << <a href='HW3.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
