--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -440,4 +440,6 @@ frameStops: {
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
 <p>心得:這學期學到很多東西，一開始被分配到兩個繪圖軟體.，分別是NX跟onshape，這兩個繪圖軟體對我來說都是新的東西，剛開始很排斥畫，到後來開始做作業的時候，發現繪圖邏輯都是一樣的，只有按鈕長的不一樣，後來又學到coppeliasim要組機械手臂，那真的很難，但到後來詢問組長和同住的室友就有比較了解，謝謝老師這學期的教導。</p>
-<h1>期末考試</h1></div></div>
+<h1>期末考試</h1>
+<p>第一階段</p>
+<p><a href="https://drive.google.com/drive/u/0/folders/1Oz6yAv9pGRogjfJHEjGCl-wWR3z7r5kq">零件檔案</a></p></div></div>
