--- a/content/期末考試.html
+++ b/content/期末考試.html
@@ -142,6 +142,7 @@ img.add_border {
     <div id="tipue_search_content">Final Project << <a href='Final Project.html'>Previous</a> <br /><h1>期末考試</h1>
 <p>第一階段</p>
 <p><a href="https://drive.google.com/drive/u/0/folders/1Oz6yAv9pGRogjfJHEjGCl-wWR3z7r5kq">零件檔案</a></p>
+<p><img alt="" height="1080" src="./../images/零件.jpg" width="1920"/></p>
 <p>組合過程</p>
 <p><a href="https://youtu.be/UZCKvx0ic8U">https://youtu.be/UZCKvx0ic8U</a></p></div></div><br />Final Project << <a href='Final Project.html'>Previous</a> </div>
         
