--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -444,4 +444,26 @@ frameStops: {
 <p><img alt="" height="1080" src="/images/零件.jpg" width="1920"/></p>
 <p>組合過程</p>
 <p><a href="https://youtu.be/UZCKvx0ic8U">https://youtu.be/UZCKvx0ic8U</a></p>
-<p>------------------------------------------------------------------------------------</p></div></div>
+<p>------------------------------------------------------------------------------------</p>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="/downloads/0116.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div></div></div>
