--- a/config/content.htm
+++ b/config/content.htm
@@ -451,7 +451,7 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="/downloads/0117.mp4" type="video/mp4"/></video>
+<source src="https://40923228.github.io/cad2021_hw/downloads/0117.mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -465,10 +465,10 @@ frameStops: {
 <p>心得:這學期學到很多東西，一開始被分配到兩個繪圖軟體.，分別是NX跟onshape，這兩個繪圖軟體對我來說都是新的東西，剛開始很排斥畫，到後來開始做作業的時候，發現繪圖邏輯都是一樣的，只有按鈕長的不一樣，後來又學到coppeliasim要組機械手臂，那真的很難，但到後來詢問組長和同住的室友就有比較了解，謝謝老師這學期的教導。</p><h1>期末考試</h1>
 <p>第一階段</p>
 <p><a href="https://drive.google.com/drive/u/0/folders/1Oz6yAv9pGRogjfJHEjGCl-wWR3z7r5kq">零件檔案</a></p>
-<p><img alt="" height="1080" src="/images/零件.jpg" width="1920"/></p>
+<p><img caption="false" height="1080" src="https://40923228.github.io/cad2021_hw/images/%E9%9B%B6%E4%BB%B6.jpg" width="1920"/></p>
 <p>組合過程</p>
 <p><a href="https://youtu.be/UZCKvx0ic8U">https://youtu.be/UZCKvx0ic8U</a></p>
-<p>------------------------------------------------------------------------------------</p>
+<p>第三階段</p>
 <script>
 var winkVideoData = {
 dataVersion: 1,
@@ -480,7 +480,7 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="/downloads/0116.mp4" type="video/mp4"/></video>
+<source src="https://40923228.github.io/cad2021_hw/downloads/0116.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
