--- a/content/期末考試.html
+++ b/content/期末考試.html
@@ -142,10 +142,10 @@ img.add_border {
     <div id="tipue_search_content">Final Project << <a href='Final Project.html'>Previous</a> <br /><h1>期末考試</h1>
 <p>第一階段</p>
 <p><a href="https://drive.google.com/drive/u/0/folders/1Oz6yAv9pGRogjfJHEjGCl-wWR3z7r5kq">零件檔案</a></p>
-<p><img alt="" height="1080" src="./../images/零件.jpg" width="1920"/></p>
+<p><img caption="false" height="1080" src="https://40923228.github.io/cad2021_hw/images/%E9%9B%B6%E4%BB%B6.jpg" width="1920"/></p>
 <p>組合過程</p>
 <p><a href="https://youtu.be/UZCKvx0ic8U">https://youtu.be/UZCKvx0ic8U</a></p>
-<p>------------------------------------------------------------------------------------</p>
+<p>第三階段</p>
 <script>
 var winkVideoData = {
 dataVersion: 1,
@@ -157,7 +157,7 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/0116.mp4" type="video/mp4"/></video>
+<source src="https://40923228.github.io/cad2021_hw/downloads/0116.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
