--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -470,6 +470,7 @@ frameStops: {
 <p></p>
 <p></p>
 <p>第二階段</p>
+<p><a href="https://drive.google.com/drive/u/1/folders/1fgqM0DY6H7dmao1X9OO639MftC6b1xo_">零件檔</a></p>
 <p>組合過程</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/UZCKvx0ic8U" width="560"></iframe></p>
 <p>第三階段</p>
@@ -497,4 +498,6 @@ frameStops: {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p>心得:這學期學到很多東西，一開始被分配到兩個繪圖軟體.，分別是NX跟onshape，這兩個繪圖軟體對我來說都是新的東西，剛開始很排斥畫，到後來開始做作業的時候，發現繪圖邏輯都是一樣的，只有按鈕長的不一樣，後來又學到coppeliasim要組機械手臂，那真的很難，但到後來詢問組長和同住的室友就有比較了解，謝謝老師這學期的教導。</p></div></div>
+<p>第一階段:已經畫完零件，丟到雲端並壓縮成zip檔</p>
+<p>第二階段:將之前組合好的檔案左右對調、重新組合，沒遇到太大問題</p>
+<p>第三階段:是將組合見丟到coppeliasim上面，並且設定介面，是跟著同學的影片慢慢做出來的，中間也有卡住友詢問組長，以解決最後有順利完成</p></div></div>
